<resources>
    <string name="app_name">LeechTeach</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LeechTeach</string>
    <string name="nav_header_subtitle">v0.0.1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_review">Review</string>
    <string name="menu_share">Share</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_source">View Source</string>
    <string name="preference_api_key">API Key</string>
    <string name="preference_api_key_summary">Enter your WaniKani API v2 key here</string>
    <string name="preference_api_key_title">Enter your API key</string>
    <string name="item_details">Item Details</string>
    <string name="hint">❓Hints</string>
    <string name="header_radical_combinations">Radical Combinations</string>
    <string name="header_meaning_mnemonic">Meaning Mnemonic</string>
    <string name="header_reading_mnemonic">Reading Mnemonic</string>
    <string name="header_visually_similar_kanji">Visually Similar Kanji</string>
    <string name="header_vocab_containing_this_kanji">Vocab Containing This Kanji</string>
    <string name="start_reviews">Start Reviews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_answer">Show Answer</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>


</resources>
