<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_review">

    <fragment
        android:id="@+id/nav_review"
        android:name="net.alcuria.review.ui.review.ReviewOverviewFragment"
        android:label="@string/menu_review"
        tools:layout="@layout/fragment_review_overview">
        <action
            android:id="@+id/action_nav_review_to_reviewQuizQuestionFragment"
            app:destination="@id/question_fragment"
            app:popUpTo="@id/nav_review"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/question_fragment"
        android:name="net.alcuria.review.ui.review.ReviewQuizQuestionFragment"
        android:label="@string/quiz"
        tools:layout="@layout/fragment_review_quiz_question">
        <action
            android:id="@+id/action_question_fragment_to_answer_fragment"
            app:destination="@id/answer_fragment"
            app:popUpTo="@id/nav_review"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/answer_fragment"
        android:name="net.alcuria.review.ui.review.ReviewQuizAnswerFragment"
        android:label="@string/quiz"
        tools:layout="@layout/fragment_review_quiz_answer">
        <action
            android:id="@+id/action_answer_fragment_to_question_fragment"
            app:destination="@id/question_fragment"
            app:popUpTo="@id/nav_review"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_answer_fragment_to_nav_review"
            app:destination="@id/nav_review"
            app:popUpTo="@id/nav_review"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="net.alcuria.review.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_item_details"
            app:destination="@id/item_details"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="net.alcuria.review.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/app_bar_main" />

    <fragment
        android:id="@+id/nav_share"
        android:name="net.alcuria.review.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="net.alcuria.review.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/item_details"
        android:name="net.alcuria.review.ui.details.ItemDetailsFragment"
        android:label="@string/item_details"
        tools:layout="@layout/fragment_item_details">
        <argument
            android:name="subject"
            app:argType="net.alcuria.review.calc.LeechSubject" />

    </fragment>

</navigation>